<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@drawable/uber_bg_img"
            android:scaleType="centerCrop"
            />

        <!-- LinearLayout 20% opacity  -->
        <View
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/black"
            android:alpha="0.8"/>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginEnd="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="250dp"
            android:gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/uber_clon_title"
                android:textColor="@color/white"
                android:textSize="75sp"
                android:fontFamily="sans-serif-medium"
                android:layout_marginBottom="120dp"/>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:startIconDrawable="@drawable/email_24">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/emailEditTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/grey_2"
                    android:hint="@string/email_editText"
                    android:background="@color/white"
                    android:inputType="textEmailAddress"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:startIconDrawable="@drawable/lock_24"
                android:layout_marginBottom="2.4dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passEditTxt"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/grey_2"
                    android:hint="@string/pass_editText"
                    android:background="@color/white"
                    android:inputType="textPassword"/>

            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/loginBtn"
                style="@style/CustomButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/login_txt"
                android:textColor="@color/white"
                android:backgroundTint="@color/grey" />

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <View
                    android:layout_width="100dp"
                    android:layout_height="1dp"
                    android:background="@color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="¿No tienes cuenta?"
                    android:textColor="@color/white"
                    android:layout_marginStart="5dp"
                    android:layout_marginEnd="5dp"/>

                <View
                    android:layout_width="100dp"
                    android:layout_height="1dp"
                    android:background="@color/white" />

            </LinearLayout>

            <Button
                android:id="@+id/goToRegisterBtn"
                style="@style/CustomButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/checkin_txt"
                android:textColor="@color/white"
                android:backgroundTint="@color/grey" />

        </LinearLayout>

    </FrameLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>